<resources>
    <string name="app_name">Saber 11</string>
    <string name="txt_nombres">Nombres</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_email">Email</string>
    <string name="txt_mail_example">Example@mail.com</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_repeat_password">Repetir Contraseña</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="txt_registrarme">Registrarme con email</string>
    <string name="txt_registro">Registro de Usuario</string>
    <string name="blank_error_msg">Debe llenar este campo</string>
    <string name="email_error_msg">"No es un email válido"</string>
    <string name="conditions_txt">Acepto los términos y condiciones de uso de sitio y la política de privacidad</string>
    <string name="terms_error_msg">Debe aceptar los términos y condiciones</string>
    <string name="password_not_valid_msg">Debe contener minúsculas, mayúsculas, números y caractéres especiales. Mínimo 8 caractéres.</string>
    <string name="does_not_match_passwords_msg">No coindiden las contraseñas</string>
    <string name="rol_error_msg">"Debe seleccionar un rol"</string>
    <string name="txt_bienvenido">Bienvenido</string>
    <string name="email_password_login_error">El correo y/o contraseña no son válidos</string>
    <string name="txt_remember_password">Recordar Contraseña</string>
    <string name="email_exist_error">El correo ya existe</string>
    <string name="nuevo_cuestionario">Nuevo Cuestionario</string>
    <string name="mis_resultados">Mis resultados</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nueva_pregunta">Nueva Pregunta</string>
    <string name="txt_pregunta">Escriba su pregunta</string>
    <string name="respuesta_a">Escriba la respuesta A</string>
    <string name="respuesta_b">Escriba la respuesta B</string>
    <string name="respuesta_c">Escriba la respuesta C</string>
    <string name="respuesta_d">Escriba la respuesta D</string>
    <string name="txt_correcta">La respuesta correcta es…</string>
    <string name="guardar_pregunta">Guardar Pregunta</string>
    <string name="answer_d">D. %s</string>
    <string name="answer_c">C. %s</string>
    <string name="answer_b">B. %s</string>
    <string name="answer_a">A. %s</string>
    <string name="option_d">D</string>
    <string name="option_c">C</string>
    <string name="option_b">B</string>
    <string name="option_a">A</string>
    <string name="categoria_error_msg">Debe seleccionar una categoria</string>
    <string name="respuesta_error_msg">Debe seleccionar una respuesta</string>
    <string name="filter_by_category">Filtrar por Categoria</string>
    <string name="pregunta">Pregunta</string>
    <string name="editar_pregunta">Editar Pregunta</string>
    <string name="regresar">Regresar</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar</string>
    <string name="registro_error">Error en registro. Intente nuevamente</string>
    <string name="registro_exitoso">Se ha registrado con éxito!</string>
    <string name="eliminar_pregunta">Eliminar Pregunta</string>
    <string name="lista_de_preguntas">Lista de preguntas</string>
    <string name="lista_de_test">Lista de Cuestionarios</string>
    <string name="drawer_open">menu abierto</string>
    <string name="drawer_closed">menu cerrado</string>
    <string name="nombre_usuario">%s %s</string>
    <string name="rol_usuario">%s</string>
    <string name="menu">Menú</string>
    <string name="cuestionario">Cuestionario #%d</string>
    <string name="fecha">Fecha: %s</string>
    <string name="test_sin_realizar">Sin realizar</string>
    <string name="calificacion">Calificación: %s</string>
    <string name="resolver_cuestionario">Resolver Cuestionario</string>
    <string name="enviar_respuestas">Enviar Respuestas</string>
    <string name="respuesta">Respuesta: %s</string>
    <string name="nuevo_intento">Intentar Nuevamente</string>
    <string name="success_test">Felicitaciones! \n%s la prueba con: %s</string>
    <string name="success">Pasaste</string>
    <string name="failure_test">Lo sentimos. \n%s la prueba con: %s</string>
    <string name="failure">Fallaste</string>
    <string name="resultados">Resultados</string>
    <string name="simulacro">Simulacro</string>
</resources>