<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu">>
        <menu >
            <item
                android:id="@+id/pregunta_navItem"
                android:icon="@drawable/ic_lista"
                android:title="@string/lista_de_preguntas"
                app:showAsAction="withText" />
            <item
                android:id="@+id/test_navItem"
                android:icon="@drawable/ic_test"
                android:title="@string/lista_de_test"
                app:showAsAction="withText" />
            <item
                android:id="@+id/itemLogout"
                android:icon="@drawable/ic_login"
                android:title="@string/cerrar_sesion"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>
</menu>