<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/itemNewCuestionario"
        android:icon="@drawable/ic_new_cuestionario"
        android:title="@string/nuevo_cuestionario"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/itemResultados"
        android:icon="@drawable/ic_resultados"
        android:title="@string/mis_resultados"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/itemLogout"
        android:icon="@drawable/ic_login"
        android:title="@string/cerrar_sesion"
        app:showAsAction="ifRoom|withText" />
</menu>