<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activities.RegistroActivity">

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txt_registro"
        android:textAlignment="center"
        android:textColor="#2B2B2B"
        android:textSize="34sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
            android:hint="@string/txt_nombres"
            android:inputType="textPersonName"
            android:textColorHint="#616161"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
            android:hint="@string/txt_apellidos"
            android:inputType="textPersonName"
            android:textColorHint="#616161"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/txt_telefono"
            android:inputType="phone"
            android:textColorHint="#616161"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#616161"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/txt_password"
            android:textColorHint="#616161"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/txt_repeat_password"
            android:textColorHint="#616161"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:hint="@string/txt_repeat_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:passwordToggleEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:smsp_arrowSize="16sp"
            app:smsp_errorTextSize="16sp"
            app:smsp_floatingLabelColor="@android:color/primary_text_light"
            app:smsp_floatingLabelSize="18sp"
            app:smsp_hint="Rol"
            app:smsp_hintColor="#616161"
            app:smsp_hintSize="20sp"
            app:smsp_itemColor="@android:color/primary_text_light"
            app:smsp_itemListColor="@android:color/primary_text_light"
            app:smsp_itemListHintBackgroundColor="#808080"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="20sp"
            app:smsp_multilineError="false"
            app:smsp_selectedItemListColor="#FF5252" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/conditions_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvErrorTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/terms_error_msg"
        android:textColor="@color/design_default_color_error"
        tools:visibility="gone" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_registrarse"
        android:textSize="24sp" />
</LinearLayout>