<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="31dp"
        app:srcCompat="@mipmap/icfes" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="text|textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLoginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_password_login_error"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="@color/indigo_dark"
        android:text="@string/txt_login"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="126dp"
        android:layout_height="21dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:text="Accede a través de:" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="46dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/google" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@mipmap/facebook" />

    </LinearLayout>


    <Button
        android:id="@+id/btnRegistro"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="22dp"
        android:background="@color/indigo_primary"
        android:text="@string/txt_registrarme"
        android:textSize="16sp"
        app:icon="@drawable/ic_mail" />


</LinearLayout>